<resources>
    <string name="app_name">Моє Авто</string>
    <string name="yes">Так</string>
    <string name="no">Ні</string>
    <string name="failure_msg">Перевірте введені дані або інтернет з\'єднання</string>
    <string name="data_saved_locally">Дані збережені локально</string>
    <string name="register_failure_msg">Такий користувач існує або неправильний пароль</string>
    <string name="loading">Завантаження…\nЗачекайте, будь ласка</string>
    <string name="osce_name">ОСЦПВ (Автоцивілка)</string>
    <string name="osce_name_short">ОСЦПВ</string>
    <string name="osce_details">обов\'язковий страховий поліс автоцивільної відповідальності</string>
    <string name="casco_name">Каско</string>
    <string name="casco_details">добровільний страховий поліс із покриттям відновлювальних робіт</string>
    <string name="login_title">Вхід у систему</string>
    <string name="username">Логін</string>
    <string name="login_username_hint">Введіть ваш логін</string>
    <string name="password">Пароль</string>
    <string name="login_password_hint">Введіть ваш пароль</string>
    <string name="login_no_account">Немає аккаунту?</string>
    <string name="login">Увійти</string>
    <string name="register_title">Реєстрація в системі</string>
    <string name="register">Зареєструватися</string>
    <string name="register_password_repeat">Повторіть пароль</string>
    <string name="register_username_hint">Створіть ваш логін</string>
    <string name="register_password_hint">Створіть ваш пароль</string>
    <string name="register_repeat_password_hint">Повторіть ваш пароль</string>
    <string name="register_have_account">Вже маєте аккаунт?</string>
    <string name="personal_data_title">Персональні дані</string>
    <string name="personal_data_first_name">Ім\'я</string>
    <string name="personal_data_first_name_hint">Ваше ім\'я</string>
    <string name="personal_data_last_name">Прізвище</string>
    <string name="personal_data_last_name_hint">Ваше прізвище</string>
    <string name="personal_data_save">Зберегти</string>
    <string name="my_insurance">Моє страхування</string>
    <string name="insurance_issued_at">Оформлено: %s</string>
    <string name="insurance_expired_at">Дійсний до: %s</string>
    <string name="insurance_price_placeholder">%.1f грн</string>
    <string name="insurance_number_placeholder">#%s-%05d</string>
    <string name="insurance_add">Оформити поліс</string>
    <string name="insurances_title">Мої поліси</string>
    <string name="insurance_details_title">Деталі полісу</string>
    <string name="insurance_pay">Сплатити</string>
    <string name="insurance_history">Історія заявок:</string>
    <string name="insurance_no_history">Заявок поки немає. Натисніть на кнопку і створіть першу заявку.</string>
    <string name="new_insurance_title">Новий поліс</string>
    <string name="new_insurance_description">Оформлення нового полісу</string>
    <string name="new_insurance_car_number">Номер авто</string>
    <string name="new_insurance_car_number_hint">АА0000АА</string>
    <string name="new_insurance_type">Тип страхування</string>
    <string name="new_insurance_exists_msg">Поліс на дане авто вже існує</string>
    <string name="new_insurance_engine_volume_hint">Об\'єм двигуна, куб. см.</string>
    <string name="new_insurance_car_type">Оберіть тип транспортного засобу:</string>
    <string name="new_insurance_type_car">Легковий автомобіль</string>
    <string name="new_insurance_type_truck">Вантажний автомобіль</string>
    <string name="new_insurance_type_moto">Мотоцикл</string>
    <string name="new_insurance_type_bus">Автобус</string>
    <string name="new_insurance_page_title">Оформлення нового полісу %s</string>
    <string name="new_insurance_engine_volume">Об\'єм двигуна, куб. см.</string>
    <string name="new_insurance_fuel_type">Оберіть тип палива:</string>
    <string name="new_insurance_fuel_type_gasoline">Бензин</string>
    <string name="new_insurance_fuel_type_diesel">Дизель</string>
    <string name="new_insurance_fuel_type_electricity">Електро</string>
    <string name="new_insurance_distance">Пробіг, тис. км</string>
    <string name="new_insurance_distance_hint">0</string>
    <string name="new_insurance_car_price">Вартіть транспортного засобу, $</string>
    <string name="new_insurance_car_price_hint">0</string>
    <string name="new_insurance_period_type">Оберіть період на страхування:</string>
    <string name="new_insurance_period_type_week">Тиждень</string>
    <string name="new_insurance_period_type_month">Місяць</string>
    <string name="new_insurance_period_type_year">Рік</string>
    <string name="new_insurance_period_type_custom">Свій варіант</string>
    <string name="new_insurance_expire_date">Поліс буде дісйний до %s</string>
    <string name="new_insurance_dialog_text">Оформити страхування (%s) на транспортний засіб із номером %s, дійсне до %s, вартістю %.2f грн?</string>
    <string name="insurance_payment_required">Термін оплати спливає. Оплатіть страхування або воно буде автоматично видалене по закінченню терміну.</string>
    <string name="insurance_payment_details">Оплата полісу #%s-%05d…\nВартість: %.2f грн</string>
    <string name="insurance_payment_success">Оплата успішна, дякуємо!</string>
    <string name="insurance_payment_pay">Сплатити</string>
    <string name="new_insurance_report_title">Нова заявка</string>
    <string name="new_insurance_report_status">Оберіть ваш статус:</string>
    <string name="new_insurance_report_status_physical">Фізична особа</string>
    <string name="new_insurance_report_status_legal">Юридична особа</string>
    <string name="new_insurance_report_email">Ваш E-Mail:</string>
    <string name="new_insurance_report_email_hint">email@example.com</string>
    <string name="new_insurance_report_registration">Ваша адреса реєстрації:</string>
    <string name="new_insurance_report_place">Ваша адреса фактичного проживання:</string>
    <string name="new_insurance_report_place_hint">Наприклад, вул. Хрещатик, 150</string>
    <string name="new_insurance_report_registration_equals_place">Фактична адреса співпадає із адресою реєстрації</string>
    <string name="new_insurance_report_phone_number">Телефон:</string>
    <string name="new_insurance_report_phone_number_hint">+380000000000</string>
    <string name="new_insurance_report_risk_type">Оберіть ризик страхового випадку:</string>
    <string name="new_insurance_report_risk_type_crash">ДТП</string>
    <string name="new_insurance_report_risk_type_pdto">ПДТО</string>
    <string name="new_insurance_report_risk_type_disaster">Стихійне лихо</string>
    <string name="new_insurance_report_risk_type_items_or_animals">Падіння предметів, напад тварин</string>
    <string name="new_insurance_report_date_time">Дата і час події:</string>
    <string name="new_insurance_report_body_number">Номер кузова</string>
    <string name="new_insurance_report_body_number_hint">AAAAA0000000000</string>
    <string name="new_insurance_report_insurance_number">Номер договору автострахування:</string>
    <string name="new_insurance_report_crash_place">Місце події</string>
    <string name="new_insurance_report_crash_place_hint">Опишіть місце, де сталася подія</string>
    <string name="new_insurance_report_crash_details">Обставини події</string>
    <string name="new_insurance_report_crash_details_hint">Опишіть обставини, за яких сталася подія</string>
    <string name="new_insurance_did_asked_organs">Чи звертались ви до компетентних органів із метою оформлення події?</string>
    <string name="new_insurance_report_did_asked_yes">Так</string>
    <string name="new_insurance_report_did_asked_no_protocol">Ні, учасники ДПТ склали Європротокол</string>
    <string name="new_insurance_report_did_asked_no_contract">Ні, не звертався за умовами Договору</string>
    <string name="new_insurance_report_did_asked_no_glass">Ні, пошкоджено лише Скло</string>
    <string name="new_insurance_report_who_control_car">Хто керував застрахованим ТЗ під час ДТП?</string>
    <string name="new_insurance_report_control_parked">ТЗ був припаркований</string>
    <string name="new_insurance_report_control_person">ТЗ керував водій</string>
    <string name="new_insurance_report_damage">Які пошкодження отримав застрахований ТЗ?</string>
    <string name="new_insurance_report_damage_hint">Розбитий бампер</string>
    <string name="new_insurance_report_address">Адреса місцезнаходження пошкодженого ТЗ:</string>
    <string name="new_insurance_report_address_hint">Наприклад, вул. Хрещатик, 200</string>
    <string name="new_insurance_report_cars_amount">Зазначте кількість інших учасників ДТП окрім Вашого ТЗ:</string>
    <string name="new_insurance_report_cars_amount_hint">0</string>
    <string name="new_insurance_report_crash_has_victims">Чи є потерпілі життю чи здоров\'ю яких завдано шкоду?</string>
    <string name="new_insurance_report_crash_guilty">В настанні ДТП винним вважаю:</string>
    <string name="new_insurance_report_crash_guilty_hint">Наприклад, себе</string>
    <string name="new_insurance_report_crash_guilty_details">тому що:</string>
    <string name="new_insurance_report_crash_guilty_details_hint">Наприклад, не впорався із керуванням</string>
    <string name="new_insurance_report_was_fixed">На місці ДТП здійснювалась фото, відео зйомка?</string>
    <string name="new_insurance_report_compensation_type">Страхове відшкодування прошу виплатити згідно рішення шляхом</string>
    <string name="new_insurance_report_compensation_type_fix">Перерахування на рахунок СТО для здійснення ремонту</string>
    <string name="new_insurance_report_compensation_type_bank_account">На особистий рахунок Страхувальника / вигодонабувача (фіз.особа) розрахувавши збитки за допомогою ПЗ Аудатекс</string>
    <string name="new_insurance_report_compensation_type_other">Спосіб буде вказано пізніше (Обравши цей варіант, мене повідомлено про необхідність подання додаткової письмової заяви, щодо способу виплати страхового відшкодування)</string>
    <string name="new_insurance_report_send">Надіслати заявку</string>
    <string name="insurance_report_details_title">Деталі заявки</string>
    <string name="insurance_report_number">Заявка #%07d</string>
    <string name="insurance_report_short_details">%s, %s</string>
    <string name="insurance_report_details_places">Адреса реєстрації:\n%s\n\nАдреса проживання:\n%s</string>
    <string name="insurance_report_details_transport_title">Транспортний засіб</string>
    <string name="insurance_report_details_damage_title">Пошкодження ТЗ</string>
    <string name="insurance_report_details_address_title">Адреса пошкодженого ТЗ</string>
    <string name="insurance_report_crash_details_title">Деталі ДТП</string>
    <string name="insurance_report_crash_cars_amount_title">Кількість інших учасників ДТП</string>
    <string name="insurance_report_guilty_placeholders">В настанні ДТП винним вважається %s, тому що %s</string>
    <string name="insurance_help_title">Страхові випадки</string>
    <string-array name="insurance_help_titles">
        <item>ДТП за наявності інших учасників пригоди</item>
        <item>ДТП за відсутності інших учасників пригоди</item>
        <item>Викрадення (угон)</item>
        <item>ПДТО (протиправні дії третіх осіб)</item>
        <item>Пожежа/вибух</item>
        <item>Стихійне лихо</item>
        <item>Напад тварин, падіння предметів</item>
        <item>Пошкодження виключно скляних деталей</item>
        <item>Оформлення страхового випадку без документів компетентних органів</item>
        <item>Випадок по КАСКО за кордоном</item>
    </string-array>
</resources>