<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/insurance_item_background_cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_osce_background">

        <TextView
            android:id="@+id/insurance_item_car_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/shape_insurance_type_background"
            android:fontFamily="@font/montserrat_bold"
            android:paddingHorizontal="12dp"
            android:paddingVertical="4dp"
            android:text="@string/app_name"
            android:textColor="@color/dark_violet"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/insurance_item_type_tv"
            app:layout_constraintStart_toEndOf="@+id/insurance_item_type_tv"
            app:layout_constraintTop_toTopOf="@+id/insurance_item_type_tv" />

        <TextView
            android:id="@+id/insurance_item_type_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_insurance_type_background"
            android:fontFamily="@font/montserrat_bold"
            android:paddingHorizontal="12dp"
            android:paddingVertical="4dp"
            android:text="@string/osce_name_short"
            android:textColor="@color/dark_violet"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/insurance_item_expired_at_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_medium"
            android:paddingHorizontal="12dp"
            android:paddingVertical="4dp"
            android:text="@string/insurance_expired_at"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/insurance_item_type_tv" />

        <TextView
            android:id="@+id/insurance_item_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:fontFamily="@font/montserrat_bold"
            android:paddingHorizontal="12dp"
            android:paddingVertical="4dp"
            android:text="@string/insurance_number_placeholder"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/insurance_item_expired_at_tv"
            app:layout_constraintTop_toBottomOf="@+id/insurance_item_expired_at_tv"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>